--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -23,8 +23,8 @@ en:
     chatbot_request_presence_penalty: "Numeric value within the range of -200 to 200. Refer to: <a target='_blank' rel='noopener' href='https://platform.openai.com/docs/api-reference/completions/create#completions/create-presence_penalty'>API docs: presence_penalty</a>"
     chatbot_enforce_system_role: "EXPERIMENTAL: Enable this to add higher priority to chatbot.prompt.system."
     chatbot_prio_system_role: "EXPERIMENTAL: Enable to use the locale chatbot.prompt.systemprio, only works if chatbot_enforce_system_role is turned OFF. This method is less agressive versus the enforce setting. Combining the system_role settings is considered VERY experimental, but should be possible"
-    chatbot_exampleassistant_system_role: "EXPERIMENTAL: Enable this to append a example assistant role"
-    chatbot_exampleuser_system_role: "EXPERIMENTAL: Enable this to a example user rol."
+    chatbot_exampleassistant_system_role: "EXPERIMENTAL: Enable this to insert a example assistant role."
+    chatbot_exampleuser_system_role: "EXPERIMENTAL: Enable this to insert a example user role."
     
     chatbot_max_response_tokens: "Specify the maximum amount of tokens bot will use to generate a response. Refer to: <a target='_blank' rel='noopener' href='https://openai.com/pricing'>OpenAI: Pricing</a>"
     chatbot_enable_verbose_console_response_progress_logging: "Enable response retrieval progress logging to console to help debug issues"
